--- a/app/src/main/res/menu/my_menu.xml
+++ b/app/src/main/res/menu/my_menu.xml
@@ -8,4 +8,11 @@
         android:icon="@drawable/ic_delete"
         app:showAsAction="never"/>
 
+    <item
+        android:id="@+id/manage_user"
+        android:title="Manage user"
+        android:icon="@drawable/ic_delete"
+        app:showAsAction="never"
+        />
+
 </menu>
